kubernetes/remote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-web
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-redirect-to-https@kubernetescrd"
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  rules:
  - host: ${DOMAIN_LUMICLOUDLLC}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-web
            port:
              number: 80
  tls:
  - hosts:
    - ${DOMAIN_LUMICLOUDLLC}
    secretName: lumicloudllc-com-tls
